--- a/index.html
+++ b/index.html
@@ -137,104 +137,116 @@
                     when looking at
                     its layout.</p>
             </div>
-            <div class="row d-flex">
-                <div class="col-lg-6 card mb-3 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="assets/images/course/course-1.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <div>
-                                    <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
-                                    <small>Some quick example text to build on the card title
-                                        and make up the bulk of the card.</small>
-                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+            <div class="row row row-cols-lg-2 row-cols-md-2 row-cols-1 g-0">
+                <div class="col">
+                    <div class="card mb-3 g-0 me-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <div>
+                                        <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                        <small>Some quick example text to build on the card title
+                                            and make up the bulk of the card.</small>
+                                        <h6 class="text-primary pt-2">Price: 20$</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="assets/images/course/course-2.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <div>
-                                    <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
-                                    <small>Some quick example text to build on the card title
-                                        and make up the bulk of the card.</small>
-                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                <div class="col">
+                    <div class="card mb-3 g-0 me-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <div>
+                                        <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
+                                        <small>Some quick example text to build on the card title
+                                            and make up the bulk of the card.</small>
+                                        <h6 class="text-primary pt-2">Price: 20$</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="assets/images/course/course-3.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <div>
-                                    <h5 class="card-title fw-bold">Fundamental Of UI/UX Development</h5>
-                                    <small>Some quick example text to build on the card title
-                                        and make up the bulk of the card.</small>
-                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                <div class="col">
+                    <div class="card mb-3 g-0 me-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <div>
+                                        <h5 class="card-title fw-bold">Fundamental Of UI/UX Development</h5>
+                                        <small>Some quick example text to build on the card title
+                                            and make up the bulk of the card.</small>
+                                        <h6 class="text-primary pt-2">Price: 20$</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="assets/images/course/course-4.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <div>
-                                    <h5 class="card-title fw-bold">Digital Marketing</h5>
-                                    <small>Some quick example text to build on the card title
-                                        and make up the bulk of the card.</small>
-                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                <div class="col">
+                    <div class="card mb-3 g-0 me-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <div>
+                                        <h5 class="card-title fw-bold">Digital Marketing</h5>
+                                        <small>Some quick example text to build on the card title
+                                            and make up the bulk of the card.</small>
+                                        <h6 class="text-primary pt-2">Price: 20$</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="assets/images/course/course-5.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <div>
-                                    <h5 class="card-title fw-bold">Photography Basic Rules</h5>
-                                    <small>Some quick example text to build on the card title
-                                        and make up the bulk of the card.</small>
-                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                <div class="col">
+                    <div class="card mb-3 g-0 me-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <div>
+                                        <h5 class="card-title fw-bold">Photography Basic Rules</h5>
+                                        <small>Some quick example text to build on the card title
+                                            and make up the bulk of the card.</small>
+                                        <h6 class="text-primary pt-2">Price: 20$</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="assets/images/course/course-6.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="card-body">
-                                <div>
-                                    <h5 class="card-title fw-bold">Motion Graphics</h5>
-                                    <small>Some quick example text to build on the card title
-                                        and make up the bulk of the card.</small>
-                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                <div class="col">
+                    <div class="card g-0 me-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="assets/images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <div>
+                                        <h5 class="card-title fw-bold">Motion Graphics</h5>
+                                        <small>Some quick example text to build on the card title
+                                            and make up the bulk of the card.</small>
+                                        <h6 class="text-primary pt-2">Price: 20$</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -298,8 +310,73 @@
                             readable content of a page when looking at its layout.</p>
                     </div>
                     <div class="col-lg-4 d-flex align-items-center">
-                        <button type="button" class="btn btn-light text-success fw-bold px-4 btn-lg ms-auto">Register
+                        <button type="button" class="btn btn-light text-success fw-bold px-4 btn-lg ms-auto"
+                            data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="mizan">Register
                             Now</button>
+
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Register Form</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form class="row g-3">
+                                            <div class="row g-3">
+                                                <div class="col">
+                                                    <label for="inputEmail4" class="form-label">First Name</label>
+                                                    <input type="text" class="form-control" placeholder="First name"
+                                                        aria-label="First name">
+                                                </div>
+                                                <div class="col">
+                                                    <label for="inputEmail4" class="form-label">Last Name</label>
+                                                    <input type="text" class="form-control" placeholder="Last name"
+                                                        aria-label="Last name">
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <label for="inputEmail4" class="form-label">Email</label>
+                                                <input type="email" class="form-control" id="inputEmail4">
+                                            </div>
+                                            <div class="col-12">
+                                                <label for="inputAddress" class="form-label">Address</label>
+                                                <input type="text" class="form-control" id="inputAddress"
+                                                    placeholder="1234 Main St">
+                                            </div>
+                                            <div class="col-12">
+                                                <label for="inputAddress2" class="form-label">Address 2</label>
+                                                <input type="text" class="form-control" id="inputAddress2"
+                                                    placeholder="Apartment, studio, or floor">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label for="inputCity" class="form-label">City</label>
+                                                <input type="text" class="form-control" id="inputCity">
+                                            </div>
+                                            <div class="col-md-4">
+                                                <label for="inputState" class="form-label">State</label>
+                                                <select id="inputState" class="form-select">
+                                                    <option selected>Choose...</option>
+                                                    <option>...</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-2">
+                                                <label for="inputZip" class="form-label">Zip</label>
+                                                <input type="text" class="form-control" id="inputZip">
+                                            </div>
+
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
