--- a/index.html
+++ b/index.html
@@ -520,76 +520,124 @@
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button fs-5 fw-bold" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Accordion Item #1
+                                what is the difference between flexbox and css grid?
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
-                                the
-                                collapse
-                                plugin adds the appropriate classes that we use to style each element. These classes
-                                control
-                                the overall
-                                appearance, as well as the showing and hiding via CSS transitions. You can modify any of
-                                this with
-                                custom CSS or overriding our default variables. It's also worth noting that just about
-                                any
-                                HTML can go
-                                within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                <h6>1. Dimensionality and Flexibility:</h6>
+                                <div class="ps-4">
+                                    <p>Flexbox offers greater control over alignment and space distribution between
+                                        items.
+                                        Being one-dimensional, Flexbox only
+                                        deals with either columns or rows.</p>
+                                    <p>Grid has two-dimension layout capabilities which allow flexible widths as a unit
+                                        of
+                                        length. This compensates for the
+                                        limitations in Flex.</p>
+                                </div>
+                                <h6>2. Alignment:</h6>
+                                <div class="ps-4">
+                                    <p>Flex Direction allows developers to align elements vertically or horizontally,
+                                        which is used when developers create and
+                                        reverse rows or columns.</p>
+                                    <p>CSS Grid deploys fractional measure units for grid fluidity and auto-keyword
+                                        functionality to automatically adjust
+                                        columns or rows.</p>
+                                </div>
+                                <h6>3. Item Management</h6>
+                                <div class="ps-4">
+                                    <p>Flex Container is the parent element while Flex Item represents the children. The
+                                        Flex Container can ensure balanced
+                                        representation by adjusting item dimensions. This allows developers to design
+                                        for fluctuating screen sizes.</p>
+                                    <p>Grid supports both implicit and explicit content placement. Its inbuilt
+                                        automation allows it to automatically extend
+                                        line items and copy values into the new creation from the preceding item.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Accordion Item #2
+                            <button class="accordion-button collapsed fs-5 fw-bold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                aria-controls="collapseTwo">
+                                Difference between Bootstrap and Tailwind?
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                until
-                                the collapse
-                                plugin adds the appropriate classes that we use to style each element. These classes
-                                control
-                                the overall
-                                appearance, as well as the showing and hiding via CSS transitions. You can modify any of
-                                this with
-                                custom CSS or overriding our default variables. It's also worth noting that just about
-                                any
-                                HTML can go
-                                within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                <h5>Bootstrap</h5>
+                                <div class="ps-4">
+                                    <p>Bootstrap comes with a set of pre-styled responsive, mobile-first components that
+                                        possess a definite UI kit.</p>
+                                    <p>Sites created using Bootstrap follow the generic pattern that makes them look
+                                        identical.</p>
+                                    <p>Websites created with Bootstraps are known for their responsiveness and flawless
+                                        design, but the looks are generic and
+                                        similar.</p>
+                                </div>
+                                <h5>Tailwind CSS</h5>
+                                <div class="ps-4">
+                                    <p>Tailwind CSS uses a set of utility classes to create a neat UI with more
+                                        flexibility and uniqueness.</p>
+                                    <p>Tailwind offers predesigned widgets to build a site from scratch with fast UI
+                                        development.</p>
+                                    <p>Websites created using Tailwind CSS are much more customizable.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Accordion Item #3
+                            <button class="accordion-button collapsed fs-5 fw-bold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                aria-controls="collapseThree">
+                                CSS Box model?
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
-                                the
-                                collapse
-                                plugin adds the appropriate classes that we use to style each element. These classes
-                                control
-                                the overall
-                                appearance, as well as the showing and hiding via CSS transitions. You can modify any of
-                                this with
-                                custom CSS or overriding our default variables. It's also worth noting that just about
-                                any
-                                HTML can go
-                                within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                <p><strong>Content Area: </strong>This area consists of content like text, images, or
+                                    other media content. It is bounded by the content edge
+                                    and its dimensions are given by content-box width and height.</p>
+                                <p><strong>Padding Area: </strong> It includes the element’s padding. This area is
+                                    actually the space around the content area and within the
+                                    border-box. Its dimensions are given by the width of the padding-box and the height
+                                    of the padding-box.</p>
+                                <p><strong>Border Area: </strong>It is the area between the box’s padding and margin.
+                                    Its dimensions are given by the width and height of
+                                    the border.</p>
+                                <p><strong>Margin Area: </strong>This area consists of space between border and margin.
+                                    The dimensions of the Margin area are the margin-box
+                                    width and the margin-box height. It is useful to separate the element from its
+                                    neighbors.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed fs-5 fw-bold" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                                aria-controls="collapseFour">
+                                What is Semantic tag?
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p><strong>Semantic Elements:</strong> Semantic elements have meaningful names which
+                                    tells about type of content. For example header,
+                                    footer, table, … etc. HTML5 introduces many semantic elements as mentioned below
+                                    which make the code easier to write and
+                                    understand for the developer as well as instructs the browser on how to treat them.
+                                </p>
                             </div>
                         </div>
                     </div>
