--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="carousel-inner rounded-3">
                     <div class="carousel-item active">
                         <img src="assets/images/cover/cover-1.png" class="d-block w-100" alt="Slide image">
-                        <div class="carousel-caption d-md-block">
+                        <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bolder display-2">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 fw-lighter">It is a long established fact that a reader will be distracted by
                                 the
@@ -89,7 +89,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="assets/images/cover/cover-2.jpg" class="d-block w-100" alt="Slide image">
-                        <div class="carousel-caption d-md-block">
+                        <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bolder display-2">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 fw-lighter">SIt is a long established fact that a reader will be distracted
                                 by the
@@ -102,7 +102,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="assets/images/cover/cover-3.jpg" class="d-block w-100" alt="Slide image">
-                        <div class="carousel-caption d-md-block">
+                        <div class="carousel-caption d-none d-md-block">
                             <h1 class="fw-bolder display-2">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 fw-lighter">It is a long established fact that a reader will be distracted by
                                 the
