--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         rel="stylesheet">
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/9c63229eec.js" crossorigin="anonymous"></script>
+    <!-- AOS animation -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,16 +46,16 @@
                                 <a class="nav-link" href="#Courses">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Deals</a>
+                                <a class="nav-link" href="#Deals">Deals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Success</a>
+                                <a class="nav-link" href="#Success">Success</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#About">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Register</a>
+                                <a class="nav-link" href="#Register">Register</a>
                             </li>
                         </ul>
                         <form class="ms-auto" role="search">
@@ -138,7 +140,7 @@
                     its layout.</p>
             </div>
             <div class="row row row-cols-lg-2 row-cols-md-2 row-cols-1 g-0">
-                <div class="col">
+                <div class="col" data-aos="fade-right" data-aos-duration="2000">
                     <div class="card mb-3 g-0 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -157,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-left" data-aos-duration="2000">
                     <div class="card mb-3 g-0 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -176,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-right" data-aos-duration="2000">
                     <div class="card mb-3 g-0 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -195,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-left" data-aos-duration="2000">
                     <div class="card mb-3 g-0 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -214,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-right" data-aos-duration="2000">
                     <div class="card mb-3 g-0 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -233,7 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-left" data-aos-duration="2000">
                     <div class="card g-0 me-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -253,12 +255,12 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center pt-4">
+            <div class="text-center pt-4" data-aos="fade-up" data-aos-duration="1500">
                 <button type="button" class="btn btn-success fw-bold px-5 py-3 btn-lg">See More Courses</button>
             </div>
         </div>
         <!-- Explore elearning Institute -->
-        <div class="container my-5">
+        <div class="container my-5" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="3000">
             <div class="card mb-3 g-0 me-3" style="max-width: 100%;">
                 <div class="row g-0">
                     <div class="col-md-6">
@@ -301,10 +303,11 @@
             </div>
         </div>
         <!-- Register area start  -->
-        <div class="container py-5">
+        <div class="container py-5" id="Register">
             <div class="card mb-3 g-0 me-3" style="max-width: 100%;">
                 <div class="row g-0 p-5 bg-success rounded-3">
-                    <div class="col-lg-8 text-light">
+                    <div class="col-lg-8 text-light" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+                        data-aos-duration="2500">
                         <h1>Ready to join?</h1>
                         <p>It is a long established fact that a reader will be distracted by the <br>
                             readable content of a page when looking at its layout.</p>
@@ -382,7 +385,7 @@
             </div>
         </div>
         <!-- Successful student part start  -->
-        <div class="container">
+        <div class="container" id="Success">
             <div class="py-5">
                 <div class="row pb-4">
                     <div class="col-lg-7 col-md-10 col-12">
@@ -393,7 +396,8 @@
 
                     </div>
                 </div>
-                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 g-4">
+                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 g-4" data-aos="fade-left"
+                    data-aos-duration="2000">
                     <div class="col">
                         <div class="card">
                             <img src="assets/images/student/student-1.png" class="card-img-top" alt="...">
@@ -446,7 +450,7 @@
                 </div>
                 <div class="container overflow-hidden">
                     <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 g-4">
-                        <div class="col">
+                        <div class="col" data-aos="fade-right" data-aos-duration="2000">
                             <div class="p-5 rounded-3 border bg-light">
                                 <div class="d-flex">
                                     <img src="assets/images/comma.png" class="img-fluid me-auto" alt="">
@@ -474,7 +478,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col" data-aos="fade-left" data-aos-duration="2000">
                             <div class="p-5 rounded-3 border bg-light">
                                 <div class="d-flex">
                                     <img src="assets/images/comma.png" class="img-fluid me-auto" alt="">
@@ -509,7 +513,7 @@
             </div>
         </div>
         <!-- Question area start  -->
-        <div class="container">
+        <div class="container" id="About">
             <div class=" py-5">
                 <div class="text-center pb-4">
                     <h1 class="display-4 fw-bolder pb-4">Frequently Asked Questions</h1>
@@ -689,6 +693,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
